# FormalML

./: .Makefile.coq.d  .dockerignore  .gitignore  .travis.yml  Assoc.v  AxiomaticNormedRealVectorSpace.v  BasicTactics.v  DefinedFunctions.v  Dockerfile  Formal_ML.opam  ListAdd.v  Makefile  Makefile.coq  Makefile.coq.conf  Makefile.coq_modules  Makefile.rocq_modules  NN.v  ProbSpace.v  README.md  RealNormedVectorSpace.v  SigmaAlg.v  TAGS  _CoqProject  _RocqProject  fetch_Lint_p.sh  sumtest.v
.github/workflows/: build.yml
coq/: .#DefinedFunctions.v  API.v  AlmostEqual.v  Assoc.v  BorelSigmaAlgebra.v  DefinedFunctions.v  DefinedFunctionsFloat.v  DefinedFunctionsIFloat.v  DiscreteProbSpace.v  Dvoretzky.v  Event.v  Expectation.v  FunctionsToReal.v  Gaussian.v  Gen_NN.v  Gen_NN_Float.v  Isomorphism.v  Lebesgue.v  ListAdd.v  NN.v  PairEncoding.v  ProbSpace.v  RandomVariable.v  RandomVariableFinite.v  RandomVariableHilbert.v  RandomVariableL1.v  RandomVariableL2.v  RandomVariableLinf.v  RandomVariableLp.v  RandomVariableLpNat.v  RandomVariableLpR.v  RandomVariableModuleSpace.v  RbarExpectation.v  RealAdd.v  RealRandomVariable.v  RealVectorHilbert.v  SigmaAlgebras.v  SimpleExpectation.v  Sums.v  VectorRandomVariable.v  (+8 more)
coq/CertRL/: README.md  mdp.v  mdp_turtle.v  pmf_monad.v  pmf_prob.v  qlearn.v  qvalues.v
coq/FHE/: arith.v  encode.v  encrypt.v  nth_root.lean  nth_root.lean~  nth_root.v  nth_root_alt.v  nth_root_new.lean  nth_root_new.lean~  polyinterp.v  zp_prim_root.v
coq/NeuralNetworks/: DefinedFunctions.v  Gen_NN.v  NN.v  derivlemmas.v  nDefinedFunctions.v  testderiv.v
coq/ProbTheory/: Almost.v  AlmostEqual.v  BorelSigmaAlgebra.v  ConditionalExpectation.v  DiscreteProbSpace.v  Dynkin.v  Event.v  Expectation.v  FunctionsToReal.v  Gaussian.v  Independence.v  Martingale.v  MartingaleConvergence.v  MartingaleStopped.v  Measures.v  OrthoProject.v  ProbSpace.v  ProbSpaceProduct.v  ProductSpace.v  ProductSpaceDep.v  RandomVariable.v  RandomVariableFinite.v  RandomVariableL2.v  RandomVariableLinf.v  RandomVariableLpNat.v  RandomVariableLpR.v  RbarExpectation.v  RealRandomVariable.v  RealVectorHilbert.v  SigmaAlgebras.v  SimpleExpectation.v  VectorConditionalExpectation.v  VectorRandomVariable.v  lintp_wrapper.v
coq/QLearn/: Bellman.v  Dvoretzky.v  Tsitsiklis.v  Tsitsiklis2.v  infprod.v  jaakkola.v  jaakkola_vector.v  lim_add.v  qlearn-redux.v  qlearn.v  qlearn_aux.v  slln.v  (+4 more)
ocaml/: Makefile  NNOptExtraction.v  NnoptExtraction.v  TurtleExtraction.v  nnopt.ml
(+179 files in other folders)
