opam-version: "2.0"
name: "Formal_ML"
version: "~dev"
synopsis: "Exploring formal verification for symbolic neural networks"
maintainer: "Avi Shinnar <shinnar@us.ibm.com>"
authors: "Avi Shinnar <shinnar@us.ibm.com>"
homepage: "https://github.com/ibm/formalml"
bug-reports: "https://github.com/ibm/formalml/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "coq" {>= "8.9.1"}
  "coq-mathcomp-ssreflect"
  "coq-coquelicot"
  "coq-flocq"
  "coq-interval" {<= "3.4.2"}
  "coq-ext-lib"
  "ocamlbuild"
  "base64"
  "menhir"
  "csv"
]
build: make
install: [make]
dev-repo: "git+https://github.com/IBM/FormalML.git"
url {
  src: "git+https://github.com/IBM/FormalML.git"
}
