opam-version: "2.0"
name: "Formal_ML"
version: "~dev"
synopsis: "Exploring formal verification for symbolic neural networks"
maintainer: "Avi Shinnar <shinnar@us.ibm.com>"
authors: "Avi Shinnar <shinnar@us.ibm.com>"
homepage: "https://github.com/ibm/formalml"
bug-reports: "https://github.com/ibm/formalml/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "coq" {>= "8.12.1"}
  "coq-mathcomp-ssreflect"
  "coq-mathcomp-algebra"
  "coq-mathcomp-algebra-tactics"
  "coq-mathcomp-real-closed"
  "coq-mathcomp-analysis"
  "coq-coquelicot"
  "coq-flocq" {>= "4.0.0" }
  "coq-interval"
  "coq-ext-lib"
  "ocamlbuild"
  "base64"
  "menhir"
  "csv"
  "coq-coq2html" {with-doc}
]
build: [[make]
       [make "doc"] {with-doc}
       [make "test"] {with-test}
       ]
install: [make]
dev-repo: "git+https://github.com/IBM/FormalML.git"
url {
  src: "git+https://github.com/IBM/FormalML.git"
}
