opam-version: "2.0"
name: "Formal_ML"
version: "~dev"
synopsis: "Exploring formal verification for symbolic neural networks"
maintainer: "Avi Shinnar <shinnar@us.ibm.com>"
authors: "Avi Shinnar <shinnar@us.ibm.com>"
license: "Apache-2.0"
homepage: "https://github.com/ibm/formalml"
bug-reports: "https://github.com/ibm/formalml/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "rocq-core" {>= "9.0.0"}
  "rocq-stdlib"
  "rocq-mathcomp-ssreflect"
  "coq-coquelicot"
  "coq-flocq" {>= "4.0.0" }
  "coq-interval" {>= "4.8.0"}
  "coq-ext-lib" {<= "1.0.0"}
  "ocamlbuild"
  "base64"
  "menhir"
  "csv"
  "coq-coq2html" {with-doc}
]
build: [[make]
       [make "doc"] {with-doc}
       ]
install: [make]
dev-repo: "git+https://github.com/IBM/FormalML.git"
url {
  src: "git+https://github.com/IBM/FormalML.git"
}
